<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="150"
    android:background="@drawable/gradient"

    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="48"
        app:cardCornerRadius="40dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/heightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/height"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/heightText"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="118dp"
                android:text="@string/zeroMetres"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/heightSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="21dp"
                android:max="200" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_weight="48"
        app:cardCornerRadius="40dp"
        android:layout_margin="8dp"
        app:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/weight"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/weightText"
                android:layout_marginStart="118dp"
                android:text="@string/zeroKilogram"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="118dp" />

            <SeekBar
                android:id="@+id/weightSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="21dp"
                android:max="200" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="48"
        app:cardCornerRadius="40dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bmiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="61dp"
                android:text="@string/bmi"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="61dp" />

            <TextView
                android:id="@+id/bmiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/bmiText"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:maxLength="8"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/bmiText" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:layout_weight="6"
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-1688280870930124/3685962288">

    </com.google.android.gms.ads.AdView>

</LinearLayout>